--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,33 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --geist-foreground: #fff;
+  --geist-background: #000;
+  --accents-8: #fafafa;
+  --accents-7: #eaeaea;
+  --accents-6: #999;
+  --accents-5: #888;
+  --accents-4: #666;
+  --accents-3: #444;
+  --accents-2: #333;
+  --accents-1: #111;
+  font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
+
 }
+
+@keyframes spin {
+  to {
+      transform: rotate(360deg);
+  }
+}
+.animate-spin {
+  animation: spin 5s linear infinite;
+}
+.c-container {
+  width: min(100vw, 1100px);
+  @apply mx-auto px-2 sm:px-3 lg:px-4;
+}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -17,17 +43,16 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply bg-yellow-50
 }
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@supports (font-variation-settings: normal) {
+  :root { font-family: InterVariable, sans-serif; }
 }
