--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,30 @@
   @apply mx-auto px-2 sm:px-3 lg:px-4;
 }
 
+.c-container-big {
+  width: min(100vw, 1500px);
+  @apply mx-auto px-2 sm:px-3 lg:px-4;
+}
+
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
